# youtube-super-lite

./: .gitignore  CLAUDE.md  Cargo.toml  DESIGN.md  README.md  app.config.ts  build.ps1  build.rs  bun.lockb  bundle.ps1  dev2.txt  devstderr.txt  package.json  se.txt  se2.txt  so.txt  tsconfig.json  wrangler.toml
auth-worker/: Cargo.toml  wrangler.jsonc
auth-worker/.wrangler/cache/: wrangler-account.json
auth-worker/src/: lib.rs
crates/ysl-core/: Cargo.toml
crates/ysl-core/src/: account.rs  chat.rs  content.rs  flows.rs  image_cache.rs  lib.rs  playback.rs  player.rs  types.rs
crates/ysl-core/src/yt/: auth.rs  history.rs  mark_watched.rs  mod.rs  playlist.rs  recommend.rs  subscriptions.rs
crates/ysl-core/src/yt/resolve/: clients.rs  mod.rs
design/: .thumbnail  SKILL.md  YouTubSuperLite おすすめ.dc.html  YouTubSuperLite チャンネル.dc.html  YouTubSuperLite 再生リスト.dc.html  YouTubSuperLite 再生リスト詳細.dc.html  YouTubSuperLite 履歴.dc.html  YouTubSuperLite 登録チャンネル.dc.html  readme.md  styles.css
design/components/badges/: DurationBadge.d.ts  DurationBadge.jsx  DurationBadge.prompt.md  LiveBadge.d.ts  LiveBadge.jsx  LiveBadge.prompt.md  badges.card.html
design/components/controls/: FilterChip.d.ts  FilterChip.jsx  FilterChip.prompt.md  PillButton.d.ts  PillButton.jsx  PillButton.prompt.md  controls.card.html
design/components/media/: Avatar.d.ts  Avatar.jsx  Avatar.prompt.md  PlaylistCard.d.ts  PlaylistCard.jsx  PlaylistCard.prompt.md  RowItem.d.ts  RowItem.jsx  RowItem.prompt.md  VideoCard.d.ts  VideoCard.jsx  VideoCard.prompt.md  media.card.html
design/components/navigation/: ChannelRow.d.ts  ChannelRow.jsx  ChannelRow.prompt.md  NavItem.d.ts  NavItem.jsx  NavItem.prompt.md  navigation.card.html
design/guidelines/: brand-token-layers.card.html  colors-accent.card.html  colors-neutral.card.html  colors-surfaces.card.html  colors-text.card.html  radius.card.html  sizing.card.html  spacing.card.html  type-roles.card.html  type-scale.card.html
design/handoff/assets/: design-tokens.json  tokens.css
design/tokens/: fonts.css  primitives.css  semantic.css
design/ui_kits/youtube-super-lite/: README.md  history.html  index.html  playlists.html
docs/: README.md
docs/design/: architecture-overview.md  auth-backend.md  dash-playback.md  design-principles.md  overlay-rendering.md  shell-checklist.md  threading-and-io.md  url-resolution.md
docs/features/: browse-lists.md  chat.md  controller-ui.md  devtools.md  login-and-rating.md  playback.md  playlists.md  ui-settings-and-gpu.md  watch-history-tracking.md
docs/setup/: oauth-setup.md
inbox/: child-dcomp-overlay-redesign.md  eq-implementation-guide.md  issue11-implementation-guide.md  issue16-implementation-guide.md  issue16-webview2-poc-plan.md  native-resolver-spec.md  native-ui-parity-tasks.md  opengl-to-native-migration.md  video-description-display.md
poc-webview2-iframe/: Cargo.toml
poc-webview2-iframe/src/: main.rs
resolver-sidecar/: Cargo.toml
resolver-sidecar/src/: main.rs
scripts/: verify_playback.ps1
src/: app.tsx  auth.rs  chat.rs  controller.rs  dcomp_overlay.rs  design.rs  devtools.rs  gl_quad.rs  global.css  global.d.ts  gpu_usage.rs  history.rs  image_cache.rs  main.rs  native_app.rs  native_overlay.rs  player.rs  playlist.rs  recommend.rs  resolve.rs  settings.rs  subscriptions.rs  webview_host.rs
src/components/: header.tsx  like-button.tsx  login-button.tsx  player.tsx  redirect.tsx
src/layouts/: bare.tsx  base.tsx
src/libs/: cloudflare.ts  cookie.ts  date.ts  datetime.ts  query.ts  session.ts  url.ts  youtube-player.ts  youtube-player.tsx
src/libs/api/: auth.ts  result.ts
src/libs/api/youtube/: client.ts  context.tsx  errors.ts  index.ts  types.ts
src/libs/auth-sessions/: client.ts
src/libs/auth-tokens/: client.ts
src/middlewares/: auth.ts  cloudflare.ts  index.ts  youtube-api.ts
src/resolve/: clients.rs  mod.rs  nsig.rs
src/routes/: [...404].tsx  index.tsx  login.ts
src/routes/channels/: [id].tsx
src/routes/index/: index.css  player.tsx
src/routes/watch/: [...id].tsx  index.css  index.tsx  player.css  player.tsx  styles.css
src/ui/: actions.rs  mod.rs  present.rs  shell.rs
src/uis/: header.tsx  login-button.tsx  movie-opener.tsx  watch-video-from-you-tube.tsx
src/uis/header/: index.css  index.tsx
tools/mpv-dev/: mpv.exp  mpv.lib
tools/p0-sabr-probe/: Cargo.toml  README.md
tools/p0-sabr-probe/node/: gen.mjs  package.json  ref_sabr.mjs
tools/p0-sabr-probe/src/: main.rs
