[package]
name = "youtube-super-lite"
version = "0.1.0"
edition = "2021"
description = "A YouTube video player written in Rust (libmpv backend)"

[dependencies]
# Windowing / event loop
winit = "0.30"
raw-window-handle = "0.6"

# OpenGL context (mpv の get_proc_address を供給 / egui の描画先)
glutin = "0.32"
glutin-winit = "0.5"
glow = "0.14"

# 重ねて表示する操作UI（URL入力欄など）
egui = "0.29"
egui_glow = { version = "0.29", features = ["winit"] }
egui-winit = { version = "0.29", features = ["clipboard"] }
# URL からの画像読み込み（カスタム絵文字 = PNG/WEBP、動画サムネ = JPEG）。
# http feature は外す: HTTP 取得は自前の image_cache::DiskImageCache が永続キャッシュ付きで担う。
egui_extras = { version = "0.29", default-features = false, features = ["image"] }
image = { version = "0.25", default-features = false, features = ["png", "webp", "jpeg"] }

# mpv bindings (maintained fork of libmpv-rs)
libmpv2 = "6"

# YouTube Data API (OAuth + 高評価など)。native-tls(schannel) で ring/nasm を回避。
reqwest = { version = "0.12", default-features = false, features = ["blocking", "native-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
dash-mpd = { version = "0.20.3", default-features = false }

# --enable-dev-tools 時のローカル HTTP サーバ（screencapture / cliclick の代替）。
tiny_http = "0.12"

# 再生履歴記録 (mark_watched) で使用。url はクエリパラメータの追加・上書き、
# rand は yt-dlp 互換の CPN（16 文字ランダム）生成のため。
url = "2"
rand = "0.8"

# 登録チャンネルタブの params に埋め込まれた channel ID を取り出すための base64 decode。
base64 = "0.22"

# Windows 限定: GPU 使用率を PDH (Performance Data Helper) で取得して
# mpv の hwdec を動的に切り替える (--auto-hwdec-fallback)。
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Performance",
] }
