[package]
name = "youtube-super-lite"
version = "0.1.0"
edition = "2021"
description = "A YouTube video player written in Rust (libmpv backend)"

[dependencies]
# Windowing / event loop（ウィンドウ生成と HWND 取得。描画は mpv(D3D11)+Direct2D）
winit = "0.30"
raw-window-handle = "0.6"

# mpv bindings (maintained fork of libmpv-rs)
libmpv2 = "6"

# YouTube Data API (OAuth + 高評価など)。native-tls(schannel) で ring/nasm を回避。
reqwest = { version = "0.12", default-features = false, features = ["blocking", "native-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
dash-mpd = { version = "0.20.3", default-features = false }

# 再生履歴記録 (mark_watched) で使用。url はクエリパラメータの追加・上書き、
# rand は yt-dlp 互換の CPN（16 文字ランダム）生成のため。
url = "2"
rand = "0.8"

# Windows 限定: GPU 使用率を PDH (Performance Data Helper) で取得して
# mpv の hwdec を動的に切り替える (--auto-hwdec-fallback)。
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Performance",
    # P1 移行実証 (src/bin/mpv_d3d11_probe.rs): 素の Win32 窓を作り mpv(D3D11)で再生する。
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi",
    # P3a 描画基盤実証 (src/bin/d2d_overlay_probe.rs): Direct2D + DirectWrite + WIC で
    # 透過オーバーレイ(per-pixel alpha)に AA矩形・日本語テキスト・JPEGサムネを描く。
    "Win32_System_Com",
    "Foundation_Numerics",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Imaging",
    "Win32_Graphics_Dxgi_Common",
    # ネイティブ版 URL 欄の貼り付け（Ctrl+V でクリップボードのテキストを取得）。
    "Win32_System_DataExchange",
    "Win32_System_Ole",
    "Win32_System_Memory",
    # オーバーレイのスライダー（シーク/音量）ドラッグ用のマウスキャプチャ。
    "Win32_UI_Input_KeyboardAndMouse",
] }
