[package]
name = "youtube-super-lite"
version = "0.1.0"
edition = "2021"
description = "A YouTube video player written in Rust (libmpv backend)"

# 解決器サイドカー（rustypipe）は別 crate に隔離する:
# - GPL-3.0 / rquickjs(C) を本体バイナリに混ぜない（本体は MIT 系・純Rust のまま）
# - YouTube 仕様変化への追従は rustypipe 更新＝サイドカーのみ再ビルドで済ませる（将来 CI 自動化）
[workspace]
members = ["resolver-sidecar", "crates/ysl-core", "tools/p0-sabr-probe"]

[dependencies]
# UI 非依存コア（ドメイン state・system・InnerTube API 群・player・resolve）。
# winit に依存しないレイヤー境界はこのクレート分割で強制する（docs/design/design-principles.md）。
ysl-core = { path = "crates/ysl-core" }

# Windowing / event loop（ウィンドウ生成と HWND 取得。描画は mpv(D3D11)+Direct2D）
winit = "0.30"
raw-window-handle = "0.6"

# state_json 等 UI 側のシリアライズで使用。
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# src/bin/ 配下の調査用プローブ（PoC U1/U5/U7）が InnerTube に直接アクセスするために使う。
# 独立バイナリだが同一パッケージのため root 側にも必要。
reqwest = { version = "0.12", default-features = false, features = ["blocking", "native-tls", "json", "cookies"] }

# Error handling
anyhow = "1"

# dev-tools (--enable-dev-tools): ローカル HTTP でスクリーンショット取得・UI 操作注入を行い、
# 外部の screencapture/cliclick に依存せず curl だけで検証フローを回す。
tiny_http = "0.12"
png = "0.17"

# Windows 限定: GPU 使用率を PDH (Performance Data Helper) で取得して
# mpv の hwdec を動的に切り替える (--auto-hwdec-fallback)。
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Performance",
    # ウィンドウ生成・メッセージ処理（mpv を wid 埋め込みする親窓と DComp 子窓）。
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi",
    # オーバーレイ描画基盤: Direct2D + DirectWrite + WIC で per-pixel alpha の UI
    # （AA矩形・日本語テキスト・JPEG/サムネ画像）を描く。
    "Win32_System_Com",
    "Foundation_Numerics",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_Imaging",
    "Win32_Graphics_Dxgi_Common",
    # オーバーレイ再設計（子窓 + DirectComposition）: mpv の D3D11 flip-model swapchain 上に
    # DComp で per-pixel alpha の UI を子窓として重ねる。D3D11→DXGI→DComp/D2D デバイスを使う。
    "Win32_Graphics_DirectComposition",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    # ネイティブ版 URL 欄の貼り付け（Ctrl+V でクリップボードのテキストを取得）。
    "Win32_System_DataExchange",
    "Win32_System_Ole",
    "Win32_System_Memory",
    # オーバーレイのスライダー（シーク/音量）ドラッグ用のマウスキャプチャ。
    "Win32_UI_Input_KeyboardAndMouse",
] }

# WebView2 ホスト（issue #16 PR1）: ライブ SABR 詰みの救済として公式 IFrame プレーヤーを
# 埋め込むための COM バインディング。`windows` crate と同じ 0.58 系にバージョンを固定する
# （webview2-com 0.35 以降は windows 0.59+ を要求し、`windows` の重複解決＝型不整合を招くため
# 0.34.0 を選定。実測は `cargo generate-lockfile` で windows のバージョンが単一に収束することで確認）。
webview2-com = "=0.34.0"
