[package]
name = "poc-webview2-iframe"
version = "0.1.0"
edition = "2021"
description = "Issue #16 PoC: WebView2 に YouTube IFrame embed をロードしてライブ再生可否を確認する使い捨て検証プログラム"
publish = false

# 本体(youtube-super-lite)とは完全に独立したパッケージ。本体の依存グラフには一切混ざらない
# （inbox/issue16-webview2-poc-plan.md の決定事項）。

[dependencies]
webview2-com = "0.39"
png = "0.17"
tiny_http = "0.12"

[dependencies.windows]
version = "0.62"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
]
