[package]
name = "ysl-core"
version = "0.1.0"
edition = "2021"
description = "youtube-super-lite の UI 非依存コア（winit 非依存）"

[dependencies]
# YouTube Data API (OAuth + 高評価など)。native-tls(schannel) で ring/nasm を回避。
reqwest = { version = "0.12", default-features = false, features = ["blocking", "native-tls", "json", "cookies"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
dash-mpd = { version = "0.20.3", default-features = false }

# ネイティブ YouTube 解決器の nsig(n パラメータ)変換用 純Rust JS エンジン。
boa_engine = "0.20"

# 再生履歴記録 (mark_watched) で使用。
url = "2"
rand = "0.8"

# mpv bindings (maintained fork of libmpv-rs)
libmpv2 = "6"

# Windows 限定: GPU 使用率を PDH (Performance Data Helper) で取得する。
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Performance",
] }
